--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-
 <adm-header></adm-header>
-<router-outlet></router-outlet>
+<main class="flex-shrinck-0">
+    <div class="container">
+        <router-outlet></router-outlet>   
+    </div>    
+</main>
 <adm-footer></adm-footer>
