--- a/src/app/pages/pag-bienvenida/pag-bienvenida.component.html
+++ b/src/app/pages/pag-bienvenida/pag-bienvenida.component.html
@@ -14,7 +14,7 @@
               <div class="row">
                   <div class="col-md-12 media">
                       <div class="col-md-6 d-flex flex-column align-items-between">
-                          <img src="assets/img/hero-image-1.png" class="hero" alt="">
+                          <img src="assets/img/2da.png" class="hero" alt="">
                           <a routerLink="/registro" type="button" class="btn btn-dark mb-5">Registrate</a>
                       </div>
                       <div class="col-md-6 d-flex flex-column">
