se agrega barra lateral de navegacion y se modifican header y footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 
-<adm-header></adm-header>
+<app-adm-header></app-adm-header>
+<app-menu></app-menu>
 <router-outlet></router-outlet>
-<adm-footer></adm-footer>
+<app-adm-footer></app-adm-footer>
