--- a/src/app/pages/retirar-dinero/retirar-dinero.component.html
+++ b/src/app/pages/retirar-dinero/retirar-dinero.component.html
@@ -7,7 +7,7 @@
         
                 <div class="input-group pt-4 pb-2">
                     <span class="input-group-text" id="span-monto">Monto a retirar</span>
-                    <input [formControl]="montoRetiro" type="number" class="form-control">
+                    <input [formTarget]="montoRetiro" type="number" class="form-control">
                     <select class="form-select" id="select-medio" aria-label="Default select example">
                         <option selected > Medio de extracción </option>
                         <option value="1">Opcion 1</option>
