--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,6 +1,5 @@
-<footer class="footer mt-auto py-3 bg-light">
+<footer class="footer mt-auto py-3">
     <div class="container">
-      <span class="text-muted"> Version 1.0
-      </span>
+      <span class="text-muted">Version 1.0</span>
     </div>
-  </footer>
+</footer>
