--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-      <span class="navbar-brand">GC PilMoney</span>
+    <nav class="navbar navbar-expand-md">
+      <span class="navbar-brand"><h3>GC PilMoney</h3></span>
     
       <button class="navbar-toggler navbar-toggler-right" type="button" aria-controls="appNavigation" aria-expanded="!isCollapsed" aria-label="Toggle navigation" (click)="toggleMenu()">
         <span class="navbar-toggler-icon"></span>
@@ -8,16 +8,8 @@
     
       <div class="collapse navbar-collapse alineado" id="appNavigation" [ngbCollapse]="isCollapsed" *ngIf="blnDisplayMenu">
         <div class="navbar-nav mr-auto">
-          <a (click)="toggleMenu()" class="nav-item nav-link btn-lg" routerLink="/home" routerLinkActive="active">Home</a>
-    
-          <div class="nav-item dropdown" ngbDropdown>
-            <a class="nav-link dropdown-toggle btn-lg"  id="dropdownSede" ngbDropdownToggle>Operaciones</a>
-            <div class="dropdown-menu" ngbDropdownMenu aria-labelledby="dropdownSede">
-              <a class="dropdown-item" routerLink="/" (click)="toggleMenu()">Agregar Dinero</a>              
-              <a class="dropdown-item" routerLink="/" (click)="toggleMenu()">Retirar Dinero</a>
-            </div>
-          </div>
-          <a (click)="toggleMenu('salir')" class="nav-item nav-link btn-lg" routerLink="/login" routerLinkActive="active">Salir</a>
+          <a (click)="toggleMenu()" class="nav-item nav-link btn-lg" routerLink="/home" routerLinkActive="active">Mi Perfil</a>
+          <a (click)="toggleMenu('salir')" class="nav-item nav-link btn-lg" routerLink="/login" routerLinkActive="active">Cerrar Sesion</a>
         </div>
       </div>
     </nav>
