--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,11 +1,11 @@
 <footer class="footer mt-auto py-3 bg-light">
     <div class="">                   
       <ul class="social-list">
-      <li><i class="fa fa-facebook"></i></li>
-      <li><i class="fa fa-twitter"></i></li>
-      <li><i class="fa fa-instagram"></i></li>
-      <li><i class="fa fa-linkedin"></i></li>
-      <li><i class="fa fa-github"></i></li>
+      <li><a class="fa fa-facebook" href="http://facebook.com/"></a></li>
+      <li><a class="fa fa-twitter" href="http://twitter.com/"></a></li>
+      <li><a class="fa fa-instagram" href="http://instagram.com/"></a></li>
+      <li><a class="fa fa-linkedin" href="http://linkedin.com/"></a></li>
+      <li><a class="fa fa-github" href="http://github.com/"></a></li>
       </ul>
     </div>
   </footer>
