--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,18 +1,18 @@
 <div class="login">  
-  <div class="main-div">
-    <form [formGroup]="signupForm" class="custom-form" (ngSubmit)="enviar(signupForm.value)">
-      <h1>Login</h1>
+  <div class="main-div container">
+    <form [formGroup]="signupForm" class="custom-form text-center align-center" (ngSubmit)="enviar(signupForm.value)">
+      <h1 class="mb-3">Login</h1>
         <p>Por favor, ingresa tu email y contraseña</p>
-        <input formControlName="usuario" type="text"> 
+        <input formControlName="usuario" type="text" class="text-center text-white" placeholder="Email"> 
         <div class="text-danger" *ngIf="signupForm.get('usuario').hasError('required') && signupForm.get('usuario').touched">Ingrese el usuario</div>
       <div *ngIf="signupForm.get('usuario').hasError('minlength')">Cantidad minima de caracteres es 4</div>
-        <input formControlName="password" type="text"> 
-        <div class="text-danger" *ngIf="signupForm.get('password').hasError('required') && signupForm.get('password').touched">Ingrese la contraseña</div>
+        <input formControlName="password" type="text" class="text-center text-white" placeholder="Contraseña"> 
+        <div class="text-danger password" *ngIf="signupForm.get('password').hasError('required') && signupForm.get('password').touched">Ingrese la contraseña</div>
       <div *ngIf="signupForm.get('password').hasError('minlength')">Cantidad minima de caracteres es 6</div>
       <br>
-      <button [disabled]="signupForm.invalid">Enviar</button>
+      <button class="button" [disabled]="signupForm.invalid">Ingresar</button>
       <br>
-      <button routerLink="/registro">Registrate</button>
+      <p class="p"> ¿No tienes una cuenta? <a class="registrarse" routerLink="/registro">Registrate</a></p>
     </form>
   </div>
 </div>
