Se recrea de 0 el login con bootstrap para que sea responsive. De igual forma no se borra el login anterior.

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="login">  
   <div class="main-div container">
-    <form [formGroup]="signupForm" class="custom-form text-center align-center" (ngSubmit)="enviar(signupForm.value)">
+    <form [formGroup]="signupForm" class="custom-form text-center align-center mt-5" (ngSubmit)="enviar(signupForm.value)">
       <h1 class="mb-3">Login</h1>
         <p>Por favor, ingresa tu email y contraseña</p>
         <input formControlName="usuario" type="text" class="text-center text-white" placeholder="Email"> 
