--- a/src/app/pages/saldo/saldo.component.css
+++ b/src/app/pages/saldo/saldo.component.css
@@ -8,44 +8,45 @@
     
  }
 
- .fondo{
-    
-        background-image: linear-gradient(
-            to right,
-            rgba(0, 0, 0, 0.5),
-            rgba(0, 0, 0, 0.5)
-           ),  
-           
-           url(./imag/cel.jpg);
-          
-           
-           background-size: cover;
-           object-fit: cover;
-  background-attachment: fixed;
-  margin: 0;
-        background-repeat: no-repeat;
-        
-        background-position: center;
-        min-height: 100vh;
-        width: 100% ;
-        
-        height: auto;
-    
- }
-
-button{
-        background-color: #EB7329;
-        border: none;
+ .card-body {
+    border-radius: 2.5rem;
+    background-color: linear-gradient(to right, rgba(0, 0, 0, 0.5));
+  }
+  
+  .fondo {
+    background-image: linear-gradient(
+        to right,
+        rgba(0, 0, 0, 0.699),
+        rgba(0, 0, 0, 0.5)
+      ),
+      url(./imag/cel.jpg);
+  
+    background-size: cover;
+    background-attachment: fixed;
+    margin: 0;
+    background-repeat: no-repeat;
+  
+    background-position: center;
+    min-height: 100vh;
+    width: 100%;
+  
+    height: auto;
+  }
+  
+  button {
+    background-color: #eb7329;
+    border: none;
     margin: 10px;
-}
-
-
-nav item{
+  }
+  
+  .nav-item{
     text-align: center;
-    
-}
-@media (max-width:480px){
-    form{
-        width: 100%;
+  }
+  @media (min-width: 768px) {
+    .card-header{
+        margin-top: 3rem;
+    }
+    p{
+        font-size: 6rem;
     }
   }
