--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,23 +1,51 @@
-<div class="login">  
-  <div class="main-div">
-    <form [formGroup]="signupForm" class="custom-form" (ngSubmit)="enviar(signupForm.value)">
-      <h1>Login</h1>
-        <p>Por favor, ingresa tu email y contraseña</p>
-        <input formControlName="usuario" type="text"> 
-        <div class="text-danger" *ngIf="signupForm.get('usuario').hasError('required') && signupForm.get('usuario').touched">Ingrese el usuario</div>
-      <div *ngIf="signupForm.get('usuario').hasError('minlength')">Cantidad minima de caracteres es 4</div>
-        <input formControlName="password" type="text"> 
-        <div class="text-danger" *ngIf="signupForm.get('password').hasError('required') && signupForm.get('password').touched">Ingrese la contraseña</div>
-      <div *ngIf="signupForm.get('password').hasError('minlength')">Cantidad minima de caracteres es 6</div>
-      <br>
-      <button [disabled]="signupForm.invalid">Enviar</button>
-      <br>
-      <button routerLink="/registro">Registrate</button>
-    </form>
+<div class="background">
+  <div class="container">
+      <div class="row">
+          <div class="col-xs-12 col-sm-8 col-md-6 col-lg-5 mx-auto">
+              <div class="card_login">
+                  <div class="card">
+                      <div class="card-body text-center">
+                          <div class="logo"></div>
+                          <form [formGroup]="loginForm" (ngSubmit)="enviar(loginForm.value)">
+                              <h1 class="mt-3 mb-2">Login</h1>
+                              <p class="mb-4">Por favor, ingresa tu email y contraseña</p>
+
+                              <!--Email-->
+                              <div class="email">
+                              <input formControlName="mail" type="text" class="form-control email" placeholder="Email">
+                              <div class="text-danger"
+                                  *ngIf="loginForm.get('mail').hasError('required') && loginForm.get('mail').touched">
+                                  El mail es necesario</div>
+                              <div class="text-danger"
+                                  *ngIf="loginForm.get('mail').hasError('email') && loginForm.get('mail').touched">
+                                  Ingrese un mail valido</div>
+                              </div>
+                              <br>
+                              <!--Contraseña-->
+                              <div class="pass">
+                              <input type="password" formControlName="password" class="form-control pass"
+                                  placeholder="Contraseña">
+                              <div  class="text-danger" *ngIf="loginForm.get('password').hasError('required') && loginForm.get('password').touched">La
+                                  contraseña es necesaria</div>
+                              <div *ngIf="loginForm.get('password').hasError('minlength') && loginForm.get('password').touched " class="text-danger">Ingrese
+                                  una contraseña valida</div>
+                              </div>
+
+                              <br>
+
+                              <!--Boton login-->
+                              <button class="btn btn-primary w-100" [disabled]="loginForm.invalid">Ingresar</button>
+
+                              <!--No esta registrado-->
+                              <p class="p"> ¿No tienes una cuenta? <a class="registrarse"
+                                      routerLink="/registro">Registrate</a></p>
+                          </form>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
   </div>
 </div>
-
-
-   
    
     
