--- a/src/app/pages/ultMovimientos/ult-mov/ult-mov.component.html
+++ b/src/app/pages/ultMovimientos/ult-mov/ult-mov.component.html
@@ -5,16 +5,16 @@
         <div class="card-header text-white col-xs-12">
           <ul class="nav nav-tabs card-header-tabs">
             <li class="nav-item">
-              <a class="nav-link btn-dark active" routerLink="/saldo">Saldo</a>
+              <a class="nav-link btn-dark active" (click)="cambio()">Saldo</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" routerLink="#">Ultimos Movimientos</a>
+              <a class="nav-link text-white" (click)="cambio()">Ultimos Movimientos</a>
             </li>
   
           </ul>
         </div>
-        <div class="card-body">
-          <button class="btn btn-dark btn-sm" routerLink="/micbu">MI CBU</button>
+        <div class="card-body" *ngIf="variable">
+          <button class="btn btn-dark btn-sm">MI CBU</button>
   
           <h4 class="card-text  text-white mt-3 mb-0">Saldo disponible</h4>
           <p class="card-title text-white display-4">$123.099</p>
@@ -26,6 +26,31 @@
           <button class="btn btn-dark w-100 col-sm-3" routerLink="/tranferir">Transferir dinero</button>
   
         </div>
+
+        <div class="card-body" *ngIf="!variable">
+            <table class="table table-striped">
+                <thead>
+                <tr>
+                  <th scope="col">#</th>
+                  <th scope="col">Country</th>
+                  <th scope="col">Area</th>
+                  <th scope="col">Population</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr *ngFor="let country of countries; index as i">
+                  <th scope="row">{{ i + 1 }}</th>
+                  <td>
+                    <img [src]="'https://upload.wikimedia.org/wikipedia/commons/' + country.flag" class="mr-2" style="width: 20px">
+                    {{ country.name }}
+                  </td>
+                  <td>{{ country.area | number }}</td>
+                  <td>{{ country.population | number }}</td>
+                </tr>
+                </tbody>
+              </table>
+    
+          </div>
       </div>
     </div>
   </div>
