--- a/src/app/contacto/contacto.component.html
+++ b/src/app/contacto/contacto.component.html
@@ -41,14 +41,15 @@
       <div class="desarrolladores">
       <p><b>CONOCE A NUESTRO EQUIPO</b></p>
         <div class="row">
-          <div class="col-md-4 media d-flex flex-column align-items-center"></div>
+          <div class="row justify-content-center">
           <div class="col-md-4 media d-flex flex-column align-items-center">
             <img src='https://img.freepik.com/vector-gratis/perfil-avatar-mujer-icono-redondo_24640-14047.jpg?size=338&ext=jpg' class='imgRedonda'/>   
             <div class="middle">
               <p>BRITOS Mariela Alejandra <!--<a href="https://github.com/marielabritos"><i class="fa fa-github" color=#EB7329></i></a><br> Scrum Master - Desarrolladora Full Stack --></p>
             </div>
           </div>
-          <div class="col-md-4 media d-flex flex-column align-items-center"></div>
+          </div>
+          <!--<div class="col-md-4 media d-flex flex-column align-items-center"></div>-->
           
 
           <div class="col-md-4 media d-flex flex-column align-items-center">
