--- a/src/app/contacto/contacto.component.css
+++ b/src/app/contacto/contacto.component.css
@@ -61,40 +61,67 @@ p{
     text-align: center;
 }
 
-.imgRedonda {
-    /*width:100px;
-    height:100px;
-    border-radius:150px;*/
-
+.circle-container {
+    position: relative;
+    width: 24em;
+    height: 24em;
+    padding: 2.8em;
+    border-radius: 50%;
+    margin: 1.75em auto 0;
+  }
+  
+  .circle-container a {
     display: block;
+    position: absolute;
+    top: 50%;
+    left: 45%;
+    width: 4em;
+    height: 4em;
+    margin: -2em;
+  }
+  
+  img {
+    border-radius: 400px;
     width: 100px;
-    height: auto;
-    border-radius:150px;
-}
-
-.middle{
-  position: absolute; 
-  bottom: 0; 
-  /*background: rgb(0, 0, 0);*/
-  /*background: rgba(0, 0, 0, 0.5);*/ /*  Black see-through */
-  color: #f1f1f1; 
-  width: 40%;
-  transition: .5s ease;
-  opacity:0;
-  color: white;
-  font-size: 20px;
-  padding: 20px;
-  text-align: center;
-  border-radius:150px;
-  background: #EB7329;
-}
-
-.desarrolladores:hover .middle {
-    opacity: 1;
-}
-
-.desarrolladores:hover .imgRedonda {
-    opacity: 0.3;
+  }
+  
+  .center img {
+      position: relative;
+  }
+  
+  /* Abajo medio - No va nadie allí*/
+  /*.deg1 img {
+    position: relative;
+    top: 150px;
+  }*/
+  /* Arriba medio */
+  .deg2 img {
+    position: relative;
+    bottom: 150px;
+  }
+  /* Abajo a la der */
+  .deg3 img {
+    position: relative;
+    top: 120px;
+    left: 100px;
+  } 
+  /* Abajo a la izq */
+  .deg4 img { 
+    position: relative;
+    top: 120px;
+    right: 100px;
+  }
+  /* Arriba a la izq */
+  .deg5 img {
+    position: relative;
+    bottom: 50px;
+    right: 150px;
+  }
+  /* Arriba a la der */
+  .deg6 img {
+    position: relative;
+    bottom: 50px;
+    left: 150px;
   }
 
 .fa {
@@ -133,10 +160,6 @@ p{
     left: 50%;
     top: 50%;
 }
-
-/*.feature-image:hover {
-    color: #EB7329
-}*/
 
 .contacto a{
     color: #EB7329;
@@ -205,8 +228,5 @@ textarea {
     form{
         width: 100%;
     }
-}
-
-
-
-
+} 
+   
