--- a/src/app/contacto/contacto.component.html
+++ b/src/app/contacto/contacto.component.html
@@ -1,24 +1,23 @@
-<!DOCTYPE html>
 <body>
-    <div class="container">
-    <br><h1>¿Necesitas ayuda?</h1>
+  <div class="container">
+    <br>
+    <h1>¿Necesitas ayuda?</h1>
     <p>
       <button (click)="onClick1()" class="btn">Preguntas Frecuentes</button>
       <button (click)="onClick2()" class="btn">Desarrolladores</button>
-      <!--<button (click)="onClick3()" class="btn">Contacto</button>-->
     </p>
     <div *ngIf="mostrar">
       <div class="preguntas-frecuentes">
         <ngb-accordion #acc="ngbAccordion">
           <ngb-panel id="toggle-1" title="¿Qué es GC PilMoney?">
             <ng-template ngbPanelContent>
-              GC PilMoney es una app y una tarjeta prepaga Mastercard internacional gratis, 
-              para que puedas manejar y ahorrar tu plata más fácil. Con la tarjeta GC PilMoney podés 
-              comprar en cualquier comercio y sitio web del mundo que acepte Mastercard. Además, 
-              podés enviar y recibir, plata a/de otros usuarios de GC PilMoney,cuentas bancarias (CBU) y 
-              cuentas virtuales (CVU) gratis e instantáneamente. También podés recargar servicios 
-              de telefonía y televisión prepagos. Además la app te ayuda a controlar tus gastos, 
-              ya que recibís una notificación en el momento que realices un consumo y podés seguir 
+              GC PilMoney es una app y una tarjeta prepaga Mastercard internacional gratis,
+              para que puedas manejar y ahorrar tu plata más fácil. Con la tarjeta GC PilMoney podés
+              comprar en cualquier comercio y sitio web del mundo que acepte Mastercard. Además,
+              podés enviar y recibir, plata a/de otros usuarios de GC PilMoney,cuentas bancarias (CBU) y
+              cuentas virtuales (CVU) gratis e instantáneamente. También podés recargar servicios
+              de telefonía y televisión prepagos. Además la app te ayuda a controlar tus gastos,
+              ya que recibís una notificación en el momento que realices un consumo y podés seguir
               todos tus movimientos desde la app cuando y desde donde quieras. Con la herramienta de
               análisis de gastos, podés ir viendo en qué gastás.
             </ng-template>
@@ -26,145 +25,113 @@
           <br>
           <ngb-panel id="toggle-2" title="¿Qué servicios brinda GC PilMoney?">
             <ng-template ngbPanelContent>
-              GC PilMoney es una empresa de tecnología que brinda servicios financieros enfocándose en la inclusión financiera. Por lo cual, GC PilMoney es una empresa que se encuentra dentro de la categoría fintech.
+              GC PilMoney es una empresa de tecnología que brinda servicios financieros enfocándose en la inclusión
+              financiera. Por lo cual, GC PilMoney es una empresa que se encuentra dentro de la categoría fintech.
             </ng-template>
           </ngb-panel>
           <ngb-panel id="toggle-3" title="¿Cuánto tarda en acreditarse el pago en el servicio?">
             <ng-template ngbPanelContent>
-              En el momento se va a debitar el pago desde tu cuenta GC PilMoney. La acreditación en el servicio se realiza dentro de las 24 horas hábiles. Si no lo ves acreditado, chateanos por el chat de la app de GC PilMoney así te ayudamos. Recordá mantenerte en línea así podemos responderte.
+              En el momento se va a debitar el pago desde tu cuenta GC PilMoney. La acreditación en el servicio se
+              realiza dentro de las 24 horas hábiles. Si no lo ves acreditado, chateanos por el chat de la app de GC
+              PilMoney así te ayudamos. Recordá mantenerte en línea así podemos responderte.
             </ng-template>
           </ngb-panel>
         </ngb-accordion>
       </div>
-    </div>  
+    </div>
     <div *ngIf="mostrar2">
       <div class="desarrolladores">
-      <p><b>CONOCE A NUESTRO EQUIPO</b></p>
-        <div class="row">
-          <div class="row justify-content-center">
-          <div class="col-md-4 media d-flex flex-column align-items-center">
-            <img src='https://img.freepik.com/vector-gratis/perfil-avatar-mujer-icono-redondo_24640-14047.jpg?size=338&ext=jpg' class='imgRedonda'/>   
-            <div class="middle">
-              <p>BRITOS Mariela Alejandra <!--<a href="https://github.com/marielabritos"><i class="fa fa-github" color=#EB7329></i></a><br> Scrum Master - Desarrolladora Full Stack --></p>
-            </div>
-          </div>
-          </div>
-          <!--<div class="col-md-4 media d-flex flex-column align-items-center"></div>-->
-          
-
-          <div class="col-md-4 media d-flex flex-column align-items-center">
-            <img src='https://img.freepik.com/vector-gratis/perfil-avatar-mujer-icono-redondo_24640-14047.jpg?size=338&ext=jpg' class='imgRedonda'/>   
-            <div class="middle">
-              <p>ALTAMIRANO Maria Angela Luz <!--<a href="https://github.com/MariaAngelaLuzAltamirano"><i class="fa fa-github" color=#EB7329></i></a><br> Desarrolladora Full Stack --></p>
-            </div>
-          </div>
-          <div class="col-md-4 media d-flex flex-column align-items-center">
-            <p>SCRUM</p>
-          </div>
-          <div class="col-md-4 media d-flex flex-column align-items-center">
-            <img src='https://dietisticavalencia.com/wp-content/uploads/2019/09/perfil-avatar-hombre-icono-redondo.jpg' class='imgRedonda'/>   
-            <div class="middle">
-              <p>BAZAN COSTILLA Julio Mariano <!--<a href="https://github.com/marianobazanc"><i class="fa fa-github" color=#EB7329></i></a><br> Desarrollador Full Stack --></p>
-            </div>
-          </div>
-
-          <div class="col-md-2 media d-flex flex-column align-items-center"></div>
-          <div class="col-sm-2 media d-flex flex-column align-items-center">
-            <img src='https://dietisticavalencia.com/wp-content/uploads/2019/09/perfil-avatar-hombre-icono-redondo.jpg' class='imgRedonda'/>   
-            <div class="middle">
-              <p>ESPINDOLA Nicolás Santiago <!--<a href="https://github.com/NicolasEspindolaOk"><i class="fa fa-github" color=#EB7329></i></a><br> Desarrollador Full Stack --></p>
-            </div>
-          </div>
-          <div class="col-md-4 media d-flex flex-column align-items-center"></div>
-          <!--<div class="col-sm-6 d-flex flex-column align-items-center">
-            <img src='https://img.freepik.com/vector-gratis/perfil-avatar-mujer-icono-redondo_24640-14047.jpg?size=338&ext=jpg' class='imgRedonda'/>   
-            <p>GONZALEZ Melisa Alejandra <a href="https://github.com/MelisaAlejandraGonzalez"><i class="fa fa-github" color=#EB7329></i></a><br> Desarrolladora Full Stack </p>
-          </div>
-          <div class="col-sm-6 d-flex flex-column align-items-center">
-            <img src='https://img.freepik.com/vector-gratis/perfil-avatar-mujer-icono-redondo_24640-14047.jpg?size=338&ext=jpg' class='imgRedonda'/>   
-            <p>LOPEZ VILLARREAL Nadia Milagros <a href="https://github.com/nadylopez"><i class="fa fa-github" color=#EB7329></i></a><br> Desarrolladora Full Stack </p>
-          </div>
-          <div class="col-sm-6 d-flex flex-column align-items-center">
-            <img src='https://dietisticavalencia.com/wp-content/uploads/2019/09/perfil-avatar-hombre-icono-redondo.jpg' class='imgRedonda'/>   
-            <p>PEDRAZA Nicolas David <a href="https://github.com/nicopedrazaok"><i class="fa fa-github" color=#EB7329></i></a><br> Desarrollador Full Stack </p>
-          </div>
-          <div class="col-sm-6 d-flex flex-column align-items-center">
-            <img src='https://dietisticavalencia.com/wp-content/uploads/2019/09/perfil-avatar-hombre-icono-redondo.jpg' class='imgRedonda'/>   
-            <p>RODRIGUEZ CUENCA Mateo <a href="https://github.com/mateocuenca"><i class="fa fa-github" color=#EB7329></i></a><br> Desarrollador Full Stack </p>
-          </div>-->
-          
-          <div class="col-sm-2 media d-flex flex-column align-items-center">
-            <img src='https://dietisticavalencia.com/wp-content/uploads/2019/09/perfil-avatar-hombre-icono-redondo.jpg' class='imgRedonda'/>   
-            <div class="middle">
-              <p>ZAPATA Julian Gabriel <!--<a href="https://github.com/julian-zapata"><i class="fa fa-github" color=#EB7329></i></a><br> Desarrollador Full Stack --></p>
-            </div>
-          </div>
-          <div class="col-md-2 media d-flex flex-column align-items-center"></div>
+        <p><b>CONOCE A NUESTRO EQUIPO</b></p>
+        <div class='circle-container'>
+          <a class='center'><img src="https://i.ibb.co/w7FRWH8/logoApp.png"></a>
+          <a class='deg2'><img
+              src="https://img.freepik.com/vector-gratis/perfil-avatar-mujer-icono-redondo_24640-14047.jpg?size=338&ext=jpg"
+              ngbPopover="Scrum Master - Desarrolladora Full Stack" placement="top" triggers="mouseenter:mouseleave"
+              popoverTitle="BRITOS Mariela"></a>
+          <a class='deg3'><img
+              src="https://img.freepik.com/vector-gratis/perfil-avatar-mujer-icono-redondo_24640-14047.jpg?size=338&ext=jpg"
+              ngbPopover="Desarrolladora Full Stack" placement="right" triggers="mouseenter:mouseleave"
+              popoverTitle="ALTAMIRANO Maria Angela"></a>
+          <a class='deg4'><img
+              src="https://dietisticavalencia.com/wp-content/uploads/2019/09/perfil-avatar-hombre-icono-redondo.jpg"
+              ngbPopover="Desarrollador Full Stack" placement="left" triggers="mouseenter:mouseleave"
+              popoverTitle="BAZAN COSTILLA Mariano"></a>
+          <a class='deg5'><img
+              src="https://dietisticavalencia.com/wp-content/uploads/2019/09/perfil-avatar-hombre-icono-redondo.jpg"
+              ngbPopover="Desarrollador Full Stack" placement="left" triggers="mouseenter:mouseleave"
+              popoverTitle="ESPÍNDOLA Nicolás"></a>
+          <a class='deg6'><img
+              src="https://dietisticavalencia.com/wp-content/uploads/2019/09/perfil-avatar-hombre-icono-redondo.jpg"
+              ngbPopover="Desarrollador Full Stack" placement="right" triggers="mouseenter:mouseleave"
+              popoverTitle="ZAPATA Julian"></a>
         </div>
         <br><br>
       </div>
     </div>
-    <!--<div *ngIf="mostrar3">-->
-      <div class="contacto">
-        <p><b><br>DONDE ENCONTRARNOS</b></p>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="caracteristicas">   
+    <div class="contacto">
+      <p><b><br>DONDE ENCONTRARNOS</b></p>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="caracteristicas">
+            <div class="feature-image">
+              <i class="fa fa-map-marker"></i>
+            </div>
+            <h4 class="feature-title">Dirección</h4>
+            <div class="feature-entry">
+              <p>Provincia de Córdoba (Argentina)</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="caracteristicas">
+            <div class="feature">
               <div class="feature-image">
-                <i class="fa fa-map-marker"></i>
+                <i class="fa fa-phone"></i>
               </div>
-              <h4 class="feature-title">Dirección</h4>
+              <h4 class="feature-title">Teléfono</h4>
               <div class="feature-entry">
-                <p>Provincia de Córdoba (Argentina)</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="caracteristicas">
-              <div class="feature">
-                <div class="feature-image">
-                  <i class="fa fa-phone"></i>
-                </div>
-                <h4 class="feature-title">Teléfono</h4>
-                <div class="feature-entry">
-                  <p>Oficina Comercial - <a href="tel:+5400000000000">0000 000 0000</a><br>Área de Soporte - <a href="tel:+5400000000000">0000 000 0000</a></p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="caracteristicas">
-              <div class="feature">
-                <div class="feature-image">
-                  <i class="fa fa-envelope"></i>
-                </div>
-                <h4 class="feature-title">Email</h4>
-                <div class="feature-entry">
-                  <p>Soporte - <a href="mailto:soporte@gcpilmoney.com?Subject=Contacto%20web">soporte@gcpilmoney.com</a><br></p>
-                  <p>Administración - <a href="mailto:administracion@gcpilmoney.com?Subject=Contacto%20web">administracion@gcpilmoney.com</a><br></p>
-                </div>
+                <p>Oficina Comercial - <a href="tel:+5400000000000">0000 000 0000</a><br>Área de Soporte - <a
+                    href="tel:+5400000000000">0000 000 0000</a></p>
               </div>
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-6 align-items-center">
-            <form action = ""> 
-              <input type = "text" name = "Nombre" placeholder = "Nombre">
-              <input type = "text" name = "Email" placeholder = "Email">
-              <input type = "text" name = "Telefono" placeholder = "Teléfono">
-              <textarea type = "text" name = "Mensaje" placeholder = "Escriba aquí su mensaje"></textarea>
-              <input type = "button" value = "Enviar" id = "boton">
-            </form>
-          </div>
-          <div class="col-md-6 align-items-center">
-            <section class="map">
-              <div class="map-frame"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3456204.151166957!2d-66.0154410465901!3d-32.2257979875489!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x942cd4a109dac635%3A0xe72d300f810e899e!2zQ8OzcmRvYmE!5e0!3m2!1ses-419!2sar!4v1627886405908!5m2!1ses-419!2sar" width="70%" height="370px" style="display: inline-block"></iframe></div>
-            </section>
+        <div class="col-md-4">
+          <div class="caracteristicas">
+            <div class="feature">
+              <div class="feature-image">
+                <i class="fa fa-envelope"></i>
+              </div>
+              <h4 class="feature-title">Email</h4>
+              <div class="feature-entry">
+                <p>Soporte - <a
+                    href="mailto:soporte@gcpilmoney.com?Subject=Contacto%20web">soporte@gcpilmoney.com</a><br></p>
+                <p>Administración - <a
+                    href="mailto:administracion@gcpilmoney.com?Subject=Contacto%20web">administracion@gcpilmoney.com</a><br>
+                </p>
+              </div>
+            </div>
           </div>
         </div>
-      <!--</div>-->
-    </div> 
-    <br><br>  
+      </div>
+      <div class="row">
+        <div class="col-md-6 align-items-center">
+          <form action="">
+            <input type="text" name="Nombre" placeholder="Nombre">
+            <input type="text" name="Email" placeholder="Email">
+            <input type="text" name="Telefono" placeholder="Teléfono">
+            <textarea type="text" name="Mensaje" placeholder="Escriba aquí su mensaje"></textarea>
+            <input type="button" value="Enviar" id="boton">
+          </form>
+        </div>
+        <div class="col-md-6 align-items-center">
+          <section class="map">
+            <div class="map-frame"><iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3456204.151166957!2d-66.0154410465901!3d-32.2257979875489!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x942cd4a109dac635%3A0xe72d300f810e899e!2zQ8OzcmRvYmE!5e0!3m2!1ses-419!2sar!4v1627886405908!5m2!1ses-419!2sar"
+                width="70%" height="370px" style="display: inline-block"></iframe></div>
+          </section>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
