--- a/src/app/pago-servicios/pago-servicios.component.html
+++ b/src/app/pago-servicios/pago-servicios.component.html
@@ -1,1 +1,73 @@
-<p>pago-servicios works!</p>
+<!--<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+
+<div class="container"> 
+    <div class="search-box">
+        <input type="search-txt" name="" placeholder="Buscar empresa">
+        <a class="search-btn" href="#">
+            <i class="fas fa-search"></i>
+
+        </a>
+    </div>
+    <br><br>
+    <h5>Todo al alcance de tus manos</h5>
+</div>
+-->
+
+<head>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400" rel="stylesheet">
+  </head>
+  <body>
+  <div class="container">
+    <div class="card">
+      <h3 class="title">Agua</h3>
+      <!--<div class="bar">
+        <div class="emptybar"></div>
+        <div class="filledbar"></div>
+      </div>
+      <div class="circle">
+        <svg version="1.1" xmlns="http://www.w3.org/2000/svg">
+        <circle class="stroke" cx="60" cy="60" r="50"/>
+      </svg>
+      </div>-->
+      <div class="stroke">
+        <button class="btn">Pagar</button>
+      </div>
+    </div>
+    <div class="card">
+      <h3 class="title">Gas</h3>
+      <!--<div class="bar">
+        <div class="emptybar"></div>
+        <div class="filledbar"></div>
+      </div>
+      <div class="circle">
+        <svg version="1.1" xmlns="http://www.w3.org/2000/svg">
+        <circle class="stroke" cx="60" cy="60" r="50"/>
+      </svg>
+      </div>-->
+    </div>
+    <div class="card">
+      <h3 class="title">Luz</h3>
+      <!--<div class="bar">
+        <div class="emptybar"></div>
+        <div class="filledbar"></div>
+      </div>
+      <div class="circle">
+        <svg version="1.1" xmlns="http://www.w3.org/2000/svg">
+        <circle class="stroke" cx="60" cy="60" r="50"/>
+      </svg>
+      </div>-->
+    </div>
+    <div class="card">
+      <h3 class="title">Internet</h3>
+      <!--<div class="bar">
+        <div class="emptybar"></div>
+        <div class="filledbar"></div>
+      </div>
+      <div class="circle">
+        <svg version="1.1" xmlns="http://www.w3.org/2000/svg">
+        <circle class="stroke" cx="60" cy="60" r="50"/>
+      </svg>
+      </div>-->
+    </div>
+  </div>
+  </body>
